--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "express": "^5.1.0",
     "mongodb": "^6.17.0",
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.3"
   }
 }
